# status-app-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  roadmap.md
scripts/: setup_status_backend.sh  test_connection.py
src/: bot.py  chat_log.py  config.py  llm.py  status_client.py
